crear formulario sencillo (sin impacto en la BD)

--- a/Pages/Login-Register/Login-Register.cshtml
+++ b/Pages/Login-Register/Login-Register.cshtml
@@ -3,4 +3,34 @@
 @{
 }
 
-<h1>Register</h1>
+<h2>Regístrate</h2>
+
+<form method="post">
+    <div>
+        <label for="Nombre">Nombre:</label>
+        <input type="text" id="Nombre" name="Usuario.Nombre" />
+    </div>
+    <div>
+        <label for="Apellido">Apellido:</label>
+        <input type="text" id="Apellido" name="Usuario.Apellido" />
+    </div>
+    <div>
+        <label for="Email">Email:</label>
+        <input type="email" id="Email" name="Usuario.Email" />
+    </div>
+    <div>
+        <label for="Telefono">Teléfono:</label>
+        <input type="text" id="Telefono" name="Usuario.Telefono" />
+    </div>
+    <div>
+        <label for="Direccion">Dirección:</label>
+        <input type="text" id="Direccion" name="Usuario.Direccion" />
+    </div>
+    <div>
+        <label for="EsCliente">Es Cliente:</label>
+        <input type="checkbox" id="EsCliente" name="Usuario.Es_Cliente" />
+    </div>
+    <button type="submit">Registrar Usuario</button>
+</form>
+
+
